Fix nav z-index

--- a/css/index.css
+++ b/css/index.css
@@ -218,7 +218,7 @@ nav {
   box-shadow: 0 3px 6px rgba(0,0,0,0.15), 0 2px 4px rgba(0,0,0,0.12);
   position: fixed;
   width: 100%;
-  z-index: 1;}
+  z-index: 2;}
 nav:after {
   content: "";
   display: table;
